# hs-workcraft

./: .gitignore  README.md  devel.hs  generate-documentation.sh  workcraft-service.cabal
config/: keter.yaml  postgresql.yml
deploy/: Procfile
docs/DevelopmentGuide/: Foundation.md  README.md
doctests/: Main.hs
etc/: LICENCE.md
internal/: Control-Monad-HTTPResponse.html  Data-Csrf.html  Handler-Home.html  Import.html  Settings-Development.html  Settings-StaticFiles.html  Web-ZYesod.html  doc-index-124.html  doc-index-33.html  doc-index-38.html  doc-index-42.html  doc-index-46.html  doc-index-47.html  doc-index-62.html  doc-index-94.html  doc-index-A.html  doc-index-All.html  doc-index-C.html  doc-index-D.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-J.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-P.html  doc-index-Q.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-W.html  doc-index-X.html  doc-index-Z.html  index-frames.html  index.html  mini_Control-Monad-HTTPResponse.html  mini_Data-Csrf.html  mini_Handler-Home.html  (+5 more)
main/: Main.hs
public/: Application.html  Foundation.html  Model.html  Settings.html  doc-index-36.html  doc-index-43.html  doc-index-45.html  doc-index-60.html  doc-index-61.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-K.html  doc-index-L.html  doc-index-M.html  doc-index-O.html  doc-index-P.html  doc-index-R.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  doc-index-Y.html  doc-index-Z.html  doc-index.html  index-frames.html  index.html  mini_Application.html  mini_Foundation.html  mini_Model.html
src/: Application.hs
src/Control/Monad/: HTTPResponse.hs  PureDB.hs
src/Control/Monad/PureDB/: Base.hs  Class.hs
src/Data/: Csrf.hs
src/Web/: ZHandler.hs  ZYesod.hs
