name:               workcraft-service
version:            0.0.1
license:            GPL-3
license-file:       etc/LICENCE.md
author:             Dom De Re
maintainer:         Dom De Re
copyright:          Copyright (C) 2010-2013
synopsis:           Workcraft Service - a blog and metric/data collection service
category:           Web
description:        Workcraft Service
homepage:           https://github.com/domdere/hs-workcraft
bug-reports:        https://github.com/domdere/hs-workcraft
cabal-version:      >= 1.10
build-type:         Custom
--extra-source-files: etc/CONTRIBUTORS,
--                    etc/CREDITS

source-repository       head
    type:               git
    location:           https://github.com/domdere/hs-workcraft.git

flag                    small_base
    description:        Choose the new, split-up base package.

flag                    dev
    description:        Turn on development settings, like auto-reload templates.
    default:            False

flag                    library-only
    description:        Build for use with "yesod devel"
    default:            False

library
    default-language:   Haskell2010


    build-depends:      base                          >= 4          && < 5
                    ,   base64-bytestring             >= 1.0        && < 1.1
                    ,   case-insensitive              >= 1.1        && < 1.2
                    ,   containers                    >= 0.5        && < 0.6
                    ,   crypto-api                    >= 0.12       && < 0.13
                    ,   mersenne-random-pure64        >= 0.2        && < 0.3
                    ,   mtl                           >= 2.1        && < 2.2
                    ,   yesod                         >= 1.2        && < 1.3
                    ,   yesod-core                    >= 1.2        && < 1.3
                    ,   yesod-auth                    >= 1.2        && < 1.3
                    ,   yesod-static                  >= 1.2        && < 1.3
                    ,   yesod-form                    >= 1.3        && < 1.4
                    ,   bytestring                    >= 0.9        && < 0.11
                    ,   http-types                    >= 0.8        && < 0.9
                    ,   text                          >= 0.11       && < 0.12
                    ,   persistent                    >= 1.2        && < 1.3
                    ,   persistent-postgresql         >= 1.2        && < 1.3
                    ,   persistent-template           >= 1.2        && < 1.3
                    ,   random                        >= 1.0        && < 1.1
                    ,   template-haskell
                    ,   hamlet                        >= 1.1        && < 1.2
                    ,   shakespeare-css               >= 1.0        && < 1.1
                    ,   shakespeare-js                >= 1.2        && < 1.3
                    ,   shakespeare-text              >= 1.0        && < 1.1
                    ,   hjsmin                        >= 0.1        && < 0.2
                    ,   monad-control                 >= 0.3        && < 0.4
                    ,   wai                           >= 2.0        && < 2.1
                    ,   wai-extra                     >= 2.0        && < 2.1
                    ,   yaml                          >= 0.8        && < 0.9
                    ,   http-conduit                  >= 2.0        && < 2.1
                    ,   directory                     >= 1.1        && < 1.3
                    ,   warp                          >= 2.0        && < 2.1
                    ,   data-default
                    ,   aeson
                    ,   conduit                       >= 1.0
                    ,   monad-logger                  >= 0.3
                    ,   fast-logger                   >= 2.0
                    ,   wai-logger                    >= 2.0



    ghc-options:        -Wall
                        -fno-warn-unused-imports
                        -fno-warn-unused-binds
                        -fno-warn-unused-do-bind
                        -fno-warn-type-defaults

    hs-source-dirs:     src

    exposed-modules:    Application
                        Foundation
                        Import
                        Model
                        Settings
                        Settings.StaticFiles
                        Settings.Development
                        Handler.Home

    other-modules:      Data.Csrf
                        Web.ZHandler
                        Web.ZYesod

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -Wall -O2

    default-extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable


executable              wcraft
    if flag(library-only)
        Buildable: False

    default-language:   Haskell2010
    -- .hs or .lhs file containing the Main module.
    hs-source-dirs:     main

    main-is:            Main.hs

    ghc-options:        -Wall
                        -threaded
                        -O2
                        -fno-warn-unused-imports
                        -fno-warn-unused-binds
                        -fno-warn-unused-do-bind
                        -fno-warn-type-defaults
                        -- -i.:..
                        -optl-Wl,-rpath,$ORIGIN
    --extra-libraries:
    --extra-lib-dirs:
    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- Other library packages from which modules are imported.
    build-depends:          base < 5 && >= 4
                        ,   workcraft-service
                        ,   yesod                         >= 1.2        && < 1.3

test-suite              doctests
    type:
                        exitcode-stdio-1.0

    main-is:
                        Main.hs

    default-language:
                        Haskell2010

    build-depends:
                        base < 5 && >= 3,
                        doctest >= 0.9.7,
                        filepath >= 1.3,
                        directory >= 1.1,
                        QuickCheck >= 2.0

    ghc-options:
                        -Wall
                        -threaded

    hs-source-dirs:
                        doctests


--test-suite test
--    type:               exitcode-stdio-1.0
--    main-is:            Main.hs
--    hs-source-dirs:     tests
--    ghc-options:        -Wall
--    default-language:   Haskell2010
--
--    build-depends:      base
--                    ,   workcraft-service
--                    ,   yesod-test >= 1.2 && < 1.3
--                    ,   yesod-core
--                    ,   yesod
--                    ,   persistent
--                    ,   persistent-postgresql
--                    ,   resourcet
--                    ,   monad-logger
--                    ,   transformers
--                    ,   hspec
